--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,28 @@ jobs:
       - run:
           name: Run Unit Tests
           command: ./gradlew test --daemon
+  docs:
+    docker:
+      - image: circleci/openjdk:8
+    steps:
+      - checkout
+      - run:
+          name: Download Script
+          command: mkdir $HOME/script && curl -o $HOME/script/create_pr.bash https://raw.githubusercontent.com/elasticio/elasticio.github.io/master/scripts/create_pr.bash
+      - run:
+          shell: /bin/bash
+          name: Create PR
+          command: bash $HOME/script/create_pr.bash -p $PWD -n soap-component
+
 workflows:
   version: 2
   build_and_test:
     jobs:
       - test
+  deploy_docs:
+    jobs:
+      - docs:
+          filters:
+            branches:
+              only:
+                - master
