--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: "idea"
 apply plugin: "java-library-distribution"
 
 group = "io.elastic"
-version = "1.2.4"
+version = "1.2.5"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -34,18 +34,18 @@ test {
 }
 
 dependencies {
-    compile group: "com.fasterxml.jackson.module", name: "jackson-module-jsonSchema", version: "2.9.6"
+    compile "com.fasterxml.jackson.module:jackson-module-jsonSchema:2.9.6"
     compile "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:2.9.6"
-    compile group: "com.fasterxml.jackson.datatype", name: "jackson-datatype-jsr353", version: "2.9.6"
+    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr353:2.9.6"
     compile "com.sun.xml.bind:jaxb-xjc:2.1.6"
     compile "com.sun.xml.ws:jaxws-tools:2.2.1"
-    compile "io.elastic:sailor-jvm:2.1.0"
+    compile "io.elastic:sailor-jvm:3.3.1"
     compile "javax.xml:jaxb-impl:2.1"
     compile files("lib/tools.jar")
     compile "org.apache.axis2:axis2-codegen:1.6.1"
     compile "org.apache.axis2:axis2-jaxbri:1.7.8"
     compile "org.jetbrains:annotations:16.0.1"
-    compile group: "org.json", name: "json", version: "20190722"
+    compile "org.json:json:20201115"
     compile("org.membrane-soa:service-proxy-core:4.6.1") {
         exclude group: "javax.annotation"
     }
@@ -54,8 +54,6 @@ dependencies {
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.4.2"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.4.2"
     testCompile "org.mockito:mockito-core:2.13.0"
-
-
 }
 
 uploadArchives {
