--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - checkout
       - restore_cache:
           key: gradle-{{ checksum "build.gradle" }}
+      - run: ./gradlew downloadDependencies --daemon
       - save_cache:
           key: gradle-{{ checksum "build.gradle" }}
           paths:
