Updated Sailor to 3.3.8

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.6"
     compile "com.sun.xml.bind:jaxb-xjc:2.1.6"
     compile "com.sun.xml.ws:jaxws-tools:2.2.1"
-    compile "io.elastic:sailor-jvm:3.3.6"
+    compile "io.elastic:sailor-jvm:3.3.8-SNAPSHOT"
     compile "javax.xml:jaxb-impl:2.1"
     compile files("lib/tools.jar")
     compile "org.apache.axis2:axis2-codegen:1.6.1"
