--- a/.grype-ignore.yaml
+++ b/.grype-ignore.yaml
@@ -1,365 +1,59 @@
 ignore:
-  - vulnerability: CVE-2023-24998
-    package:
-      name: commons-fileupload
-      version: 1.3.3
-
-  - vulnerability: GHSA-hfrx-6qgj-fp6c
-    package:
-      name: commons-fileupload
-      version: 1.3.3
-
-  - vulnerability: GHSA-78wr-2p64-hpwj
-    package:
-      name: commons-io
-      version: 2.7
-
-  - vulnerability: CVE-2011-5034
-    package:
-      name: geronimo-activation_1.1_spec
-      version: 1.1
-
-  - vulnerability: CVE-2011-5034
-    package:
-      name: geronimo-jta_1.1_spec
-      version: 1.1
-
-  - vulnerability: CVE-2011-5034
-    package:
-      name: geronimo-stax-api_1.0_spec
-      version: 1.0.1
-
-  - vulnerability: CVE-2011-5034
-    package:
-      name: geronimo-ws-metadata_2.0_spec
-      version: 1.1.2
-
-  - vulnerability: GHSA-hw42-3568-wj87
-    package:
-      name: google-oauth-client
-      version: 1.21.0
-
-  - vulnerability: GHSA-f263-c949-w85g
-    package:
-      name: google-oauth-client
-      version: 1.21.0
-
-  - vulnerability: CVE-2023-2976
-    package:
-      name: guava
-      version: 19.0
-
-  - vulnerability: GHSA-jjjh-jjxp-wpff
-    package:
-      name: jackson-databind
-      version: 2.13.2.2
-
-  - vulnerability: CVE-2022-42004
-    package:
-      name: jackson-databind
-      version: 2.13.2.2
-
-  - vulnerability: GHSA-rgv9-q543-rqg4
-    package:
-      name: jackson-databind
-      version: 2.13.2.2
-
-  - vulnerability: GHSA-h4x4-5qp2-wp46
-    package:
-      name: jackson-datatype-jsr310
-      version: 2.8.3
-
-  - vulnerability: GHSA-6qvw-249j-h44c
-    package:
-      name: jose4j
-      version: 0.4.4
-
-  - vulnerability: GHSA-4jq9-2xhw-jpx7
-    package:
-      name: json
-      version: 20201115
-      
-  - vulnerability: GHSA-3vqj-43w4-2q58
-    package:
-      name: json
-      version: 20201115
-
-  - vulnerability: GHSA-vmq6-5m68-f53m
-    package:
-      name: logback-classic
-      version: 1.2.10
-
-  - vulnerability: GHSA-vmq6-5m68-f53m
-    package:
-      name: logback-core
-      version: 1.2.10
-
-  - vulnerability: GHSA-w77p-8cfg-2x43
-    package:
-      name: slf4j-ext
-      version: 1.6.3
-
-  - vulnerability: GHSA-3mc7-4q67-w48m
-    package:
-      name: snakeyaml
-      version: 1.15
-
-  - vulnerability: GHSA-rvwf-54qp-4r6v
-    package:
-      name: snakeyaml
-      version: 1.15
-
-  - vulnerability: GHSA-mjmj-j48q-9wg2
-    package:
-      name: snakeyaml
-      version: 1.15
-
-  - vulnerability: GHSA-pv39-qp28-4mgh
-    package:
-      name: soa-model-core
-      version: 1.6.0
-
-  - vulnerability: CVE-2018-1270
-    package:
-      name: spring-core
-      version: 4.2.3.RELEASE
-
-  - vulnerability: CVE-2016-1000027
-    package:
-      name: spring-core
-      version: 4.2.3.RELEASE
-
-  - vulnerability: CVE-2022-22965
-    package:
-      name: spring-core
-      version: 4.2.3.RELEASE
-
-  - vulnerability: CVE-2017-1000208
-    package:
-      name: swagger-parser
-      version: 1.0.23
-
-  - vulnerability: CVE-2017-1000207
-    package:
-      name: swagger-parser
-      version: 1.0.23
-
-  - vulnerability: GHSA-vgvf-9jh3-fg75
-    package:
-      name: swagger-parser
-      version: 1.0.23
-
-  - vulnerability: GHSA-q7pf-qr96-2vq5
-    package:
-      name: swagger-parser
-      version: 1.0.23
-
-  - vulnerability: CVE-2022-40152
-    package:
-      name: woodstox-core
-      version: 5.0.3
-
-  - vulnerability: GHSA-mm8h-8587-p46h
-    package:
-      name: amqp-client
-      version: 5.9.0
-
-  - vulnerability: GHSA-jw7r-rxff-gv24
-    package:
-      name: apache-mime4j-core
-      version: 0.7.2
-
-  - vulnerability: CVE-2012-5351
-    package:
-      name: axis2-adb
-      version: 1.7.8
-
-  - vulnerability: CVE-2012-4418
-    package:
-      name: axis2-adb
-      version: 1.7.8
-
-  - vulnerability: CVE-2012-5351
-    package:
-      name: axis2-codegen
-      version: 1.7.8
-
-  - vulnerability: CVE-2012-4418
-    package:
-      name: axis2-codegen
-      version: 1.7.8
-
-  - vulnerability: CVE-2012-5351
-    package:
-      name: axis2-jaxbri
-      version: 1.7.8
-
-  - vulnerability: CVE-2012-4418
-    package:
-      name: axis2-jaxbri
-      version: 1.7.8
-
-  - vulnerability: CVE-2012-5351
-    package:
-      name: axis2-kernel
-      version: 1.7.8
-
-  - vulnerability: CVE-2012-4418
-    package:
-      name: axis2-kernel
-      version: 1.7.8
-
-  - vulnerability: CVE-2024-47554
-    package:
-      name: commons-io
-      version: 2.7
-
-  - vulnerability: CVE-2008-0732
-    package:
-      name: geronimo-activation_1.1_spec
-      version: 1.1
-
-  - vulnerability: CVE-2008-0732
-    package:
-      name: geronimo-jta_1.1_spec
-      version: 1.1
-
-  - vulnerability: CVE-2008-0732
-    package:
-      name: geronimo-stax-api_1.0_spec
-      version: 1.0.1
-
-  - vulnerability: CVE-2008-0732
-    package:
-      name: geronimo-ws-metadata_2.0_spec
-      version: 1.1.2
-
-  - vulnerability: CVE-2020-8908
-    package:
-      name: guava
-      version: 19.0
-
-  - vulnerability: CVE-2018-10237
-    package:
-      name: guava
-      version: 19.0
-
-  - vulnerability: CVE-2023-2976
-    package:
-      name: guava
-      version: 19.0
-
-  - vulnerability: GHSA-5mg8-w23w-74h3
-    package:
-      name: guava
-      version: 19.0
-
-  - vulnerability: GHSA-7g45-4rm6-3mm3
-    package:
-      name: guava
-      version: 19.0
-
-  - vulnerability: GHSA-mvr2-9pj6-7w5j
-    package:
-      name: guava
-      version: 19.0
-
-  - vulnerability: CVE-2023-35116
-    package:
-      name: jackson-databind
-      version: 2.13.2.2
-
-  - vulnerability: CVE-2022-42003
-    package:
-      name: jackson-databind
-      version: 2.13.2.2
-
-  - vulnerability: GHSA-jgvc-jfgh-rjvv
-    package:
-      name: jose4j
-      version: 0.4.4
-
-  - vulnerability: GHSA-7g24-qg88-p43q
-    package:
-      name: jose4j
-      version: 0.4.4
-
-  - vulnerability: CVE-2024-9143
-    package:
-      name: libcrypto3
-      version: 3.3.2-r0
-
-  - vulnerability: CVE-2024-9143
-    package:
-      name: libssl3
-      version: 3.3.2-r0
-
-  - vulnerability: GHSA-c4r9-r8fh-9vj2
-    package:
-      name: snakeyaml
-      version: 1.15
-
-  - vulnerability: GHSA-w37g-rhq8-7m4j
-    package:
-      name: snakeyaml
-      version: 1.15
-
-  - vulnerability: GHSA-hhhw-99gj-p3c3
-    package:
-      name: snakeyaml
-      version: 1.15
-
-  - vulnerability: GHSA-98wm-3w3q-mw94
-    package:
-      name: snakeyaml
-      version: 1.15
-
-  - vulnerability: GHSA-9w3m-gqgf-c4p9
-    package:
-      name: snakeyaml
-      version: 1.15
-
-  - vulnerability: CVE-2018-1257
-    package:
-      name: spring-core
-      version: 4.2.3.RELEASE
-
-  - vulnerability: CVE-2022-22950
-    package:
-      name: spring-core
-      version: 4.2.3.RELEASE
-
-  - vulnerability: CVE-2018-11039
-    package:
-      name: spring-core
-      version: 4.2.3.RELEASE
-
-  - vulnerability: CVE-2020-5421
-    package:
-      name: spring-core
-      version: 4.2.3.RELEASE
-
-  - vulnerability: CVE-2022-22968
-    package:
-      name: spring-core
-      version: 4.2.3.RELEASE
-
-  - vulnerability: CVE-2023-20861
-    package:
-      name: spring-core
-      version: 4.2.3.RELEASE
-
-  - vulnerability: CVE-2018-11040
-    package:
-      name: spring-core
-      version: 4.2.3.RELEASE
-
-  - vulnerability: CVE-2018-15756
-    package:
-      name: spring-core
-      version: 4.2.3.RELEASE
-
-  - vulnerability: GHSA-3f7h-mf4q-vrm4
-    package:
-      name: woodstox-core
-      version: 5.0.3
+- GHSA-mm8h-8587-p46h
+- GHSA-jw7r-rxff-gv24
+- CVE-2012-4418
+- CVE-2012-5351
+- CVE-2023-24998
+- GHSA-hfrx-6qgj-fp6c
+- CVE-2024-47554
+- GHSA-78wr-2p64-hpwj
+- CVE-2011-5034
+- CVE-2008-0732
+- GHSA-hw42-3568-wj87
+- GHSA-f263-c949-w85g
+- CVE-2018-10237
+- CVE-2023-2976
+- GHSA-mvr2-9pj6-7w5j
+- CVE-2020-8908
+- GHSA-5mg8-w23w-74h3
+- GHSA-7g45-4rm6-3mm3
+- GHSA-jjjh-jjxp-wpff
+- CVE-2023-35116
+- CVE-2022-42004
+- GHSA-rgv9-q543-rqg4
+- CVE-2022-42003
+- GHSA-h4x4-5qp2-wp46
+- GHSA-6qvw-249j-h44c
+- GHSA-jgvc-jfgh-rjvv
+- GHSA-7g24-qg88-p43q
+- GHSA-4jq9-2xhw-jpx7
+- GHSA-3vqj-43w4-2q58
+- CVE-2024-9143
+- GHSA-vmq6-5m68-f53m
+- GHSA-w77p-8cfg-2x43
+- GHSA-3mc7-4q67-w48m
+- GHSA-98wm-3w3q-mw94
+- GHSA-rvwf-54qp-4r6v
+- GHSA-9w3m-gqgf-c4p9
+- GHSA-hhhw-99gj-p3c3
+- GHSA-c4r9-r8fh-9vj2
+- GHSA-w37g-rhq8-7m4j
+- GHSA-pv39-qp28-4mgh
+- CVE-2022-22970
+- CVE-2018-1257
+- CVE-2020-5421
+- CVE-2022-22950
+- CVE-2018-11039
+- CVE-2022-22968
+- CVE-2018-1270
+- CVE-2016-1000027
+- CVE-2018-15756
+- CVE-2018-11040
+- CVE-2022-22965
+- CVE-2023-20861
+- CVE-2017-1000208
+- CVE-2017-1000207
+- GHSA-vgvf-9jh3-fg75
+- GHSA-q7pf-qr96-2vq5
+- GHSA-3f7h-mf4q-vrm4
+- CVE-2022-40152
